--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-
+<!--
 <nav >
 
     <div class="top">
@@ -24,7 +24,7 @@
     </div>
 
 </nav>
-
+-->
 
 
     <main class="container">
@@ -39,7 +39,9 @@
     <li class="option1">   <span>Line - width</span></li>
     
     <li class="option2">
-<input type="range"  >
+
+<input type="range"  id="line-Widther">
+
     </li>
  
 <li class="option3"><span>Colors</span></li>
@@ -60,7 +62,8 @@
 
 <div class="Drawing-Board" >
 
-<canvas id="Drawing-Board" class="canvas-Board"></canvas>
+<canvas id="Drawing-Board" class="canvas-Board">
+</canvas>
 
 </div>
 
