--- a/index.html
+++ b/index.html
@@ -40,13 +40,15 @@
     
     <li class="option2">
 
-<input type="range"  id="line-Widther">
+<input type="range"  id="line-Widther" min="1" max="45" value="5">
 
     </li>
  
 <li class="option3"><span>Colors</span></li>
 
-<li class="option4"> <input id="stroke"  type="color" value="#f50505" > </li>
+<li class="option4">
+     <input id="stroke"  type="color" value="#000000" > 
+    </li>
 
 
 
