--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     
     <li class="option2">
 
-<input type="range"  id="line-Widther" min="1" max="45" value="5">
+<input type="range"  id="line-Widther" min="1" max="45" value="4">
 
     </li>
  
@@ -53,8 +53,8 @@
 
 
 <div class="buttons">
-<button class="Reseat" >Reseat</button>
-<button class="Save-as-image">Save As Image</button>
+<button class="Reseat" id="Reset">Reset</button>
+<button class="Save-as-image" id="download">Save Me</button>
 </div>
 
 
