--- a/index.html
+++ b/index.html
@@ -35,7 +35,14 @@
     <label > Tools</label>
 <ul class="options">
 
-   
+    
+<li class="option3"><span>Colors</span></li>
+
+<li class="option4">
+     <input id="stroke"  type="color" value="#e90101" class="stroke" > 
+    </li>
+
+
     <li class="option1">   <span>Line - width</span></li>
     
     <li class="option2">
@@ -43,13 +50,6 @@
 <input type="range"  id="line-Widther" min="1" max="45" value="4">
 
     </li>
- 
-<li class="option3"><span>Colors</span></li>
-
-<li class="option4">
-     <input id="stroke"  type="color" value="#000000" > 
-    </li>
-
 
 
 <div class="buttons">
