--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+
     <title>Drawing Web App </title>
   <!--css link  -->  
     <link href="./style.css" rel="stylesheet">
@@ -32,7 +34,7 @@
 <div class="drawing-Tools" id="toolbar">
 
 
-    <label > Tools</label>
+    <h2 > Tools</h2>
 <ul class="options">
 
     
