--- a/index.html
+++ b/index.html
@@ -16,17 +16,6 @@
 
 </head>
 <body>
-<!--
-<nav >
-
-    <div class="top">
-        <h3 class="top heading">Draw Your Thoughts</h3>
-        <img src="./drawing2.png" width="50px">
-    
-    </div>
-
-</nav>
--->
 
 
     <main class="container">
@@ -43,8 +32,12 @@
 <li class="option4">
      <input id="stroke"  type="color" value="#e90101" class="stroke" > 
     </li>
+ <!--
+<li class="text" id="text" >
 
-
+    Text
+</li>
+-->
     <li class="option1">   <span>Line - width</span></li>
     
     <li class="option2">
@@ -62,7 +55,7 @@
 
 </div>
 
-
+<div class="curserFollower"></div>
 
 <div class="Drawing-Board" >
 
