--- a/index.html
+++ b/index.html
@@ -26,7 +26,38 @@
     <h2 > Tools</h2>
 <ul class="options">
 
+   
+    <li class="shape  tool " id="Brush">
+
+<img src="./brush_white_24dp.svg" width="30" height="30" 
+ style="background: rgb(32, 32, 32); "  class="Brush1"></label>
+
+<br/>
+    <span > Brush  </span>
+    </li>
     
+
+<li class="shape tool "  id="circle">
+    <!-- <label for="circle">  -->
+        <img src="./circle.webp" width="30" height="30"  class="circle1"></label>
+<p>Circle</p>
+        <!-- <input type="radio" id="circle" class="circle" >      -->
+
+</li>
+
+
+<li class="shape tool " id="Rectangle">
+ 
+<img src="./rectangel7.webp" width="30" height="30"
+ style="background: rgb(15, 15, 15); border: 1px rgb(0, 0, 0);" class="Rectangle1"></label>
+
+         
+<p>Rectangle</p>
+</li>
+
+
+
+
 <li class="option3"><span>Colors</span></li>
 
 <li class="option4">
